--- a/espring.vbproj
+++ b/espring.vbproj
@@ -183,6 +183,7 @@
     <Compile Include="Sewing_Department.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="userSession.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Check_Details.resx">
