--- a/espring.vbproj
+++ b/espring.vbproj
@@ -79,60 +79,60 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Approval_Department.Designer.vb">
+    <Compile Include="form\Approval_Department.Designer.vb">
       <DependentUpon>Approval_Department.vb</DependentUpon>
     </Compile>
-    <Compile Include="Approval_Department.vb">
+    <Compile Include="form\Approval_Department.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Check_Details.Designer.vb">
-      <DependentUpon>Check_Details.vb</DependentUpon>
+    <Compile Include="form\Order_Details.Designer.vb">
+      <DependentUpon>Order_Details.vb</DependentUpon>
     </Compile>
-    <Compile Include="Check_Details.vb">
+    <Compile Include="form\Order_Details.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Constant.vb" />
-    <Compile Include="Cutting_Department.Designer.vb">
+    <Compile Include="form\Cutting_Department.Designer.vb">
       <DependentUpon>Cutting_Department.vb</DependentUpon>
     </Compile>
-    <Compile Include="Cutting_Department.vb">
+    <Compile Include="form\Cutting_Department.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Database.vb" />
-    <Compile Include="Edit_Delivery_Date.Designer.vb">
+    <Compile Include="form\Edit_Delivery_Date.Designer.vb">
       <DependentUpon>Edit_Delivery_Date.vb</DependentUpon>
     </Compile>
-    <Compile Include="Edit_Delivery_Date.vb">
+    <Compile Include="form\Edit_Delivery_Date.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Embroidery_Department.Designer.vb">
+    <Compile Include="form\Embroidery_Department.Designer.vb">
       <DependentUpon>Embroidery_Department.vb</DependentUpon>
     </Compile>
-    <Compile Include="Embroidery_Department.vb">
+    <Compile Include="form\Embroidery_Department.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Generate_Barcode.Designer.vb">
+    <Compile Include="form\Generate_Barcode.Designer.vb">
       <DependentUpon>Generate_Barcode.vb</DependentUpon>
     </Compile>
-    <Compile Include="Generate_Barcode.vb">
+    <Compile Include="form\Generate_Barcode.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Inventory_Preparation.Designer.vb">
+    <Compile Include="form\Inventory_Preparation.Designer.vb">
       <DependentUpon>Inventory_Preparation.vb</DependentUpon>
     </Compile>
-    <Compile Include="Inventory_Preparation.vb">
+    <Compile Include="form\Inventory_Preparation.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Job_Log.Designer.vb">
+    <Compile Include="form\Job_Log.Designer.vb">
       <DependentUpon>Job_Log.vb</DependentUpon>
     </Compile>
-    <Compile Include="Job_Log.vb">
+    <Compile Include="form\Job_Log.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.vb">
+    <Compile Include="form\Login.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.vb">
+    <Compile Include="form\Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
@@ -152,71 +152,71 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="New_Order.Designer.vb">
+    <Compile Include="form\New_Order.Designer.vb">
       <DependentUpon>New_Order.vb</DependentUpon>
     </Compile>
-    <Compile Include="New_Order.vb">
+    <Compile Include="form\New_Order.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Order_Management.Designer.vb">
+    <Compile Include="form\Order_Management.Designer.vb">
       <DependentUpon>Order_Management.vb</DependentUpon>
     </Compile>
-    <Compile Include="Order_Management.vb">
+    <Compile Include="form\Order_Management.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Password_Update.Designer.vb">
+    <Compile Include="form\Password_Update.Designer.vb">
       <DependentUpon>Password_Update.vb</DependentUpon>
     </Compile>
-    <Compile Include="Password_Update.vb">
+    <Compile Include="form\Password_Update.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Printing_Department.Designer.vb">
+    <Compile Include="form\Printing_Department.Designer.vb">
       <DependentUpon>Printing_Department.vb</DependentUpon>
     </Compile>
-    <Compile Include="Printing_Department.vb">
+    <Compile Include="form\Printing_Department.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Registration.Designer.vb">
+    <Compile Include="form\Registration.Designer.vb">
       <DependentUpon>Registration.vb</DependentUpon>
     </Compile>
-    <Compile Include="Registration.vb">
+    <Compile Include="form\Registration.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Security.vb" />
-    <Compile Include="Sewing_Department.Designer.vb">
+    <Compile Include="form\Sewing_Department.Designer.vb">
       <DependentUpon>Sewing_Department.vb</DependentUpon>
     </Compile>
-    <Compile Include="Sewing_Department.vb">
+    <Compile Include="form\Sewing_Department.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Session.vb" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Approval_Department.resx">
+    <EmbeddedResource Include="form\Approval_Department.resx">
       <DependentUpon>Approval_Department.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Check_Details.resx">
-      <DependentUpon>Check_Details.vb</DependentUpon>
+    <EmbeddedResource Include="form\Order_Details.resx">
+      <DependentUpon>Order_Details.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Cutting_Department.resx">
+    <EmbeddedResource Include="form\Cutting_Department.resx">
       <DependentUpon>Cutting_Department.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Edit_Delivery_Date.resx">
+    <EmbeddedResource Include="form\Edit_Delivery_Date.resx">
       <DependentUpon>Edit_Delivery_Date.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Embroidery_Department.resx">
+    <EmbeddedResource Include="form\Embroidery_Department.resx">
       <DependentUpon>Embroidery_Department.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Generate_Barcode.resx">
+    <EmbeddedResource Include="form\Generate_Barcode.resx">
       <DependentUpon>Generate_Barcode.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Inventory_Preparation.resx">
+    <EmbeddedResource Include="form\Inventory_Preparation.resx">
       <DependentUpon>Inventory_Preparation.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Job_Log.resx">
+    <EmbeddedResource Include="form\Job_Log.resx">
       <DependentUpon>Job_Log.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="form\Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
@@ -225,22 +225,22 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="New_Order.resx">
+    <EmbeddedResource Include="form\New_Order.resx">
       <DependentUpon>New_Order.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Order_Management.resx">
+    <EmbeddedResource Include="form\Order_Management.resx">
       <DependentUpon>Order_Management.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Password_Update.resx">
+    <EmbeddedResource Include="form\Password_Update.resx">
       <DependentUpon>Password_Update.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Printing_Department.resx">
+    <EmbeddedResource Include="form\Printing_Department.resx">
       <DependentUpon>Printing_Department.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Registration.resx">
+    <EmbeddedResource Include="form\Registration.resx">
       <DependentUpon>Registration.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Sewing_Department.resx">
+    <EmbeddedResource Include="form\Sewing_Department.resx">
       <DependentUpon>Sewing_Department.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
@@ -256,6 +256,7 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
