--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -1,7 +1,39 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" UseMySettingsClassName="true">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="My" GeneratedClassName="MySettings" UseMySettingsClassName="true">
+  <Profiles />
+  <Settings>
+    <Setting Name="DB_HOST" Type="System.String" Scope="User">
+      <Value Profile="(Default)">127.0.0.1</Value>
+    </Setting>
+    <Setting Name="DB_USER" Type="System.String" Scope="User">
+      <Value Profile="(Default)">root</Value>
+    </Setting>
+    <Setting Name="DB_PASSWORD" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DB_NAME" Type="System.String" Scope="User">
+      <Value Profile="(Default)">espring</Value>
+    </Setting>
+    <Setting Name="FTP_URL" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ftp://192.168.1.23/espring</Value>
+    </Setting>
+    <Setting Name="FTP_USER" Type="System.String" Scope="User">
+      <Value Profile="(Default)">espring</Value>
+    </Setting>
+    <Setting Name="FTP_PASSWORD" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1234</Value>
+    </Setting>
+    <Setting Name="PAYMENT_DIR" Type="System.String" Scope="User">
+      <Value Profile="(Default)">payment</Value>
+    </Setting>
+    <Setting Name="ARTWORK_DIR" Type="System.String" Scope="User">
+      <Value Profile="(Default)">artwork</Value>
+    </Setting>
+    <Setting Name="MAX_UPLOAD_MB" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">4</Value>
+    </Setting>
+    <Setting Name="PAGINATION_LIMIT" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1000</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
