--- a/espring.vbproj
+++ b/espring.vbproj
@@ -12,21 +12,6 @@
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -61,23 +46,6 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\CrystalDecisions.CrystalReports.Engine.dll</HintPath>
-    </Reference>
-    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\CrystalDecisions.ReportSource.dll</HintPath>
-    </Reference>
-    <Reference Include="CrystalDecisions.Shared, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\CrystalDecisions.Shared.dll</HintPath>
-    </Reference>
-    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\CrystalDecisions.Windows.Forms.dll</HintPath>
-    </Reference>
-    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="MySql.Data">
       <HintPath>..\..\..\..\Desktop\espring\dependencies\mysql-connector-net-6.9.9-noinstall\v4.5\MySql.Data.dll</HintPath>
     </Reference>
@@ -88,8 +56,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -181,10 +147,10 @@
     <Compile Include="form\Embroidery_Department.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="form\Generate_Barcode.Designer.vb">
-      <DependentUpon>Generate_Barcode.vb</DependentUpon>
+    <Compile Include="form\Generate_Barcode_Department.Designer.vb">
+      <DependentUpon>Generate_Barcode_Department.vb</DependentUpon>
     </Compile>
-    <Compile Include="form\Generate_Barcode.vb">
+    <Compile Include="form\Generate_Barcode_Department.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="form\Inventory_Preparation.Designer.vb">
@@ -258,12 +224,6 @@
     <Compile Include="form\Register.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="report\Job.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Job.rpt</DependentUpon>
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Security.vb" />
     <Compile Include="form\Sewing_Department.Designer.vb">
       <DependentUpon>Sewing_Department.vb</DependentUpon>
@@ -307,8 +267,8 @@
     <EmbeddedResource Include="form\Embroidery_Department.resx">
       <DependentUpon>Embroidery_Department.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="form\Generate_Barcode.resx">
-      <DependentUpon>Generate_Barcode.vb</DependentUpon>
+    <EmbeddedResource Include="form\Generate_Barcode_Department.resx">
+      <DependentUpon>Generate_Barcode_Department.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="form\Inventory_Preparation.resx">
       <DependentUpon>Inventory_Preparation.vb</DependentUpon>
@@ -346,10 +306,6 @@
     <EmbeddedResource Include="form\Sewing_Department.resx">
       <DependentUpon>Sewing_Department.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="report\Job.rpt">
-      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>Job.vb</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="My Project\Application.myapp">
@@ -366,21 +322,6 @@
   <ItemGroup>
     <Content Include="images\loading.gif" />
     <Content Include="images\logo.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.5">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
